Fixed lint errors

--- a/style.css
+++ b/style.css
@@ -105,8 +105,7 @@ a:hover {
   text-decoration: none;
 }
 
-h4:hover
-h2:hover {
+h4:hover h2:hover {
   text-decoration: red underline;
 }
 
@@ -118,6 +117,7 @@ h4:hover {
   color: red;
   text-decoration: none;
 }
+
 h2 {
   padding: 0 0 11px;
 }
@@ -139,7 +139,7 @@ h2 {
   background-color: lavender;
 }
 
-.navbar-wrapper { 
+.navbar-wrapper {
   width: 100%;
   margin: 0 auto;
   background-color: #fff;
@@ -222,7 +222,7 @@ h2 {
   color: rgb(154, 154, 154);
 }
 
-.first-section-title:hover{
+.first-section-title:hover {
   text-decoration: none;
 }
 
@@ -246,11 +246,11 @@ h2 {
 .politics {
   font-size: 17px;
   font-weight: bold;
-  font-family: "Roboto Condensed",sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   color: hsl(5, 94%, 52%);
   text-transform: uppercase;
   padding: 5px 15px 15px;
-  background-color: rgba(255,255,255,0.9);
+  background-color: rgba(255, 255, 255, 0.9);
   position: absolute;
   z-index: 1;
   margin-top: -29px;
@@ -269,7 +269,7 @@ h2 {
 }
 
 .hero-pandemic-title {
-  color:rgb(39,39,39);
+  color: rgb(39, 39, 39);
   font-size: 20px;
   font-family: "Lora", serif;
   margin: 0 0 10px;
@@ -280,7 +280,7 @@ h2 {
   font-size: 15px;
   margin: 0 0 10px;
   font-family: Arial, Helvetica, sans-serif;
-  color: rgb(171,171,171);
+  color: rgb(171, 171, 171);
   line-height: 20px;
 }
 
@@ -297,8 +297,7 @@ h2 {
   background: rgb(236, 238, 239);
 }
 
-.debate_img,
-.opinin_img {
+.debate_img, .opinin_img {
   width: 60px;
   height: 60px;
 }
@@ -482,7 +481,7 @@ h1 a:hover {
 .all-magz-articles-img {
   width: 100%;
   height: 100%;
-  min-height: 278px ;
+  min-height: 278px;
 }
 
 .newsweek-icon {
@@ -505,7 +504,7 @@ h1 a:hover {
 
 .us-title {
   font-size: 22px;
-  font-family: "Roboto Condensed",sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   color: #000;
   margin: 10px 0 25px;
   font-weight: bold;
@@ -517,6 +516,7 @@ h1 a:hover {
   font-family: "Roboto Condensed", sans-serif;
   font-weight: bold;
 }
+
 .height {
   height: 98px;
 }
@@ -599,8 +599,7 @@ div .slide-tag {
   height: 35px;
 }
 
-.copyright,
-.list-group-item a {
+.copyright, .list-group-item a {
   font-size: 12px;
   font-family: Arial, Helvetica, sans-serif;
   color: #666;
@@ -662,5 +661,3 @@ Extra (xl) large devices (large desktops, 1200px and up)
     height: 100%;
   }
 }
-
-
