--- a/style.css
+++ b/style.css
@@ -34,6 +34,18 @@ body {
   font-size: 18px;
 }
 
+.copyright,
+.list-group-item a {
+  font-size: 12px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #666;
+}
+
+.heros-pandemic-section-title :hover {
+  text-decoration: none;
+  color: none;
+}
+
 .nav-bar li a,
 .search_input,
 .newsletter-title,
@@ -101,15 +113,12 @@ body {
   background: rgb(247, 36, 16);
 }
 
-.copyright,
-.list-group-item a {
-  font-size: 12px;
-  font-family: Arial, Helvetica, sans-serif;
-  color: #666;
-}
-
 a:hover {
   text-decoration: none;
+}
+
+h2 {
+  padding: 0 0 11px;
 }
 
 h4:hover h2:hover {
@@ -123,10 +132,6 @@ h6 a:hover {
 h4:hover {
   color: red;
   text-decoration: none;
-}
-
-h2 {
-  padding: 0 0 11px;
 }
 
 .border {
@@ -265,11 +270,6 @@ h2 {
   text-decoration: none;
   font-size: 16px;
   color: rgba(3, 3, 3, 0.5);
-}
-
-.heros-pandemic-section-title :hover {
-  text-decoration: none;
-  color: none;
 }
 
 .hero-pandemic-title {
@@ -536,21 +536,21 @@ div .slide-tag {
 
 .aside-title {
   font-size: 24px;
-  font-family: "Roboto Condensed" sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   color: #000;
   font-weight: bold;
 }
 
 .aside-title-small {
   font-size: 20px;
-  font-family: "Roboto Condensed" sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   color: #000;
   font-weight: bold;
 }
 
 .aside-small-para {
   font-size: 15px;
-  font-family: "Roboto Condensed" sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 .img-newsletter {
